@startuml 

hide circle

entity "User" {
    user_id: string
    --
    access_token: string
}

entity "Artist" {
  artist_id: string
  --
  name: string
  url: string
  iconUrl: string
}

entity "ListenTo" {
  listen_id: string
  --
  timestamp: timestamp
  user_id: string <<FK>>
  artist_id: string <<FK>>
}

User ||..o{ ListenTo
Artist ||..o{ ListenTo
@enduml